# atcoder-tools

./: .gitignore  .travis.yml  AtCoder.py  AtCoderClient.py  AtCoderClientForTester.py  CHANGELOG.md  CONTRIBUTING.md  Calculator.py  CppCodeGenerator.py  CppCodeGeneratorForTester.py  FormatAnalyzer.py  FormatPredictor.py  FormatTokenizer.py  GuessingInputFormat.py  LICENCE  MANIFEST.in  PULL_REQUEST_TEMPLATE.md  README.md  atcoder-tools  codecov.yml  deploy_to_pypi.sh  experiment.py  lecture.md  main.cpp  main.py  overall_test.py  pyproject.toml  requirements.txt  run.py  sample_downloader.py  setup.py  supported_list.md  utils.py
atcodertools/: __init__.py  atcoder_tools.py
benchmark/: benchmark.py  overall_test.py  support_list.html  support_list.md  test_result.txt
core/: AtCoder.py  AtCoderClient.py  Calculator.py  FormatAnalyzer.py  FormatPredictor.py  FormatTokenizer.py  TemplateEngine.py  TypePredictor.py  utils.py
dev-tools/: package-lock.json  package.json  tsconfig.json
etc/: lecture.md
intellij-plugin/: README.md  build.gradle  settings.gradle
support_list/: support_list.html
templates/: cpp.py  settings.json  template_settings.json  template_success.cpp
test/: TestAtCoderClient.py  TestAtCoderEnv.py  TestCodeGenerator.py  TestFormatPredictor.py  tester_test.py
tests/: test_atc_env.py  test_atcoder_client.py  test_atcoder_client_mock.py  test_atcoder_client_real.py  test_calculator.py  test_codegen.py  test_codegen_command.py  test_compiler.py  test_compiler_backup.py  test_config.py  test_constpred.py  test_envgen.py  test_fmtprediction.py  (+5 more)
(+600 files in other folders)
