[tool.poetry]
name = "atcoder-tools"
packages = [
    {include = "atcodertools"}
]
version = "2.2.0"
description = "Convenient modules & tools for AtCoder users, written in Python 3.6"
authors = ["kyuridenamida <tyotyo3@gmail.com>"]
license = "MIT"
repository="https://github.com/kyuridenamida/atcoder-tools"
documentation="https://github.com/kyuridenamida/atcoder-tools"
readme="README.md"
include = ["atcodertools/tools/templates/*", "atcodertools/tools/atcodertools-default.toml"]

[tool.poetry.dependencies]
python = "^3.6"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
colorama = "^0.4.4"
toml = "^0.10.2"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
twine = "^3.4.1"
flake8 = "^3.9.1"
autopep8 = "^1.5.6"
codecov = "^2.1.11"
nose = "^1.3.7"

[tool.poetry.scripts]
atcoder-tools = 'atcodertools.atcoder_tools:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
